# fin-primitives

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  write_r46.py  write_r47.py  write_r48.py  write_r49.py  write_r50.py  write_r51.py  write_r52.py  write_r53.py  write_r54.py  write_r56.py  write_r57.py  write_r58.py  write_r59.py  write_r60.py  write_r61.py  write_r62.py  write_r63.py  write_r64.py  write_r65.py  write_r66.py  write_r67.py  write_r68.py  write_r69.py  write_r70.py  write_r71.py  write_r72.py  write_r73.py  write_r74.py  write_r75.py  write_r77.py  write_r78.py  write_r79.py  write_r80.py  write_r81.py  (+8 more)
.github/workflows/: ci.yml  release.yml
benches/: tick_bench.rs
python/: pyproject.toml
src/: async_signals.rs  attribution.rs  backtest.rs  error.rs  greeks.rs  lib.rs  microstructure.rs
src/backtest/: engine.rs  mod.rs  walk_forward.rs
src/correlation/: mod.rs  stats.rs
src/cross_asset/: mod.rs
src/crypto/: mod.rs
src/derivatives/: mod.rs  swaps.rs
src/events/: mod.rs
src/execution/: mod.rs
src/factor/: mod.rs
src/impact/: mod.rs
src/latency/: mod.rs
src/microstructure/: mod.rs
src/ml/: mod.rs
src/montecarlo/: mod.rs
src/ohlcv/: mod.rs
src/options/: greeks.rs  mod.rs  surface.rs
src/orderbook/: mod.rs
src/pnl/: mod.rs
src/portfolio/: mod.rs  optimizer.rs
src/position/: kelly.rs  mod.rs
src/python/: mod.rs
src/regime/: hmm.rs  mod.rs
src/risk/: attribution.rs  mod.rs  stress.rs
src/scenario/: mod.rs
src/signals/: combine.rs  compose.rs  composite.rs  entropy.rs  mod.rs  multi_tf.rs  pipeline.rs  warmup.rs
src/signals/indicators/: abs_return_mean.rs  abs_return_sum.rs  acceleration_bands.rs  adaptive_rsi.rs  adaptive_supertrend.rs  adx.rs  alligator.rs  alma.rs  amplitude_ratio.rs  anchored_vwap.rs  apo.rs  aroon.rs  aroon_oscillator.rs  atr.rs  atr_channel_width.rs  atr_normalized_close.rs  atr_percent.rs  atr_percentile.rs  atr_ratio.rs  atr_stop.rs  atrp.rs  autocorrelation_1.rs  average_bar_range.rs  average_gain.rs  average_gap.rs  average_loss.rs  avg_down_return.rs  avg_true_range_pct.rs  avg_up_return.rs  awesome_oscillator.rs  bar_close_rank.rs  bar_efficiency.rs  bar_follow_through.rs  bar_momentum_index.rs  bar_momentum_score.rs  bar_open_position.rs  bar_overlap_ratio.rs  bar_polarity_ratio.rs  bar_polarity_streak.rs  bar_quality_score.rs  (+710 more)
src/technical/: mod.rs
src/tick/: mod.rs
src/types/: mod.rs
src/volatility/: garch.rs  mod.rs
src/yield_curve/: mod.rs
tests/: api_coverage.rs  book_reconstruction.rs  edge_cases.rs  indicator_accuracy.rs  ohlcv_scenarios.rs  orderbook_advanced.rs  orderbook_stress.rs  position_lifecycle.rs  position_risk_integration.rs  property_tests.rs  risk_monitor.rs  serde_roundtrip.rs  signal_pipeline.rs  tick_to_ohlcv.rs
