[package]
name = "fin-primitives"
version = "1.1.0"
edition = "2021"
rust-version = "1.75"
description = "Financial market primitives: validated price/quantity types, lock-free order book, OHLCV aggregation, technical indicators (SMA/EMA/RSI), position ledger, and risk monitoring."
authors = ["Matt Busel <matt@busel.dev>"]
repository = "https://github.com/Mattbusel/fin-primitives"
documentation = "https://docs.rs/fin-primitives"
readme = "README.md"
license = "MIT"
keywords = ["finance", "trading", "hft", "orderbook", "market-data"]
categories = ["finance", "data-structures", "algorithms"]
include = ["src/**/*", "benches/**/*", "tests/**/*", "Cargo.toml", "README.md", "LICENSE", "CHANGELOG.md"]

[dependencies]
# tokio: async runtime, core dependency
tokio = { version = "1.40", features = ["full"] }
# serde: serialization framework
serde = { version = "1", features = ["derive"] }
# serde_json: JSON support
serde_json = "1"
# chrono: datetime handling with serde support
chrono = { version = "0.4", features = ["serde"] }
# rust_decimal: exact decimal arithmetic for financial values; never use f64 for prices
rust_decimal = { version = "1", features = ["serde-with-str"] }
# rust_decimal_macros: dec!() macro for decimal literals in tests
rust_decimal_macros = "1"
# thiserror: zero-cost error derive, replaces manual Display impls
thiserror = "1"

[dev-dependencies]
# proptest: property-based testing, required for algorithmic correctness guarantees
proptest = "1"
tokio = { version = "1.40", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "tick_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[lints.clippy]
# Correctness
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
# Style
pedantic = "warn"
# Allow common false-positive pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
