[package]
name = "fin-primitives"
version = "2.8.0"
edition = "2021"
rust-version = "1.81"
description = "Financial market primitives: validated types, order book, OHLCV aggregation, 550+ streaming technical indicators, position ledger, and risk monitoring."
authors = ["Matt Busel <matt@busel.dev>"]
repository = "https://github.com/Mattbusel/fin-primitives"
documentation = "https://docs.rs/fin-primitives"
readme = "README.md"
license = "MIT"
keywords = ["finance", "trading", "hft", "orderbook", "market-data"]
categories = ["finance", "data-structures", "algorithms"]
include = ["src/**/*", "benches/**/*", "tests/**/*", "Cargo.toml", "README.md", "LICENSE", "CHANGELOG.md"]

[dependencies]
# serde: serialization framework
serde = { version = "1", features = ["derive", "rc"] }
# chrono: datetime handling with serde support
chrono = { version = "0.4", features = ["serde"] }
# rust_decimal: exact decimal arithmetic for financial values; never use f64 for prices
rust_decimal = { version = "1", features = ["serde-with-str"] }
# rust_decimal_macros: dec!() macro for decimal literals in tests
rust_decimal_macros = "1"
# thiserror: zero-cost error derive, replaces manual Display impls
thiserror = "1"

[dev-dependencies]
# proptest: property-based testing, required for algorithmic correctness guarantees
proptest = "1"
tokio = { version = "1.40", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }
serde_json = "1"

[[bench]]
name = "tick_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[lints.clippy]
# Correctness
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
# Style
pedantic = { level = "warn", priority = -1 }
# Allow common false-positive pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Suppress remaining pedantic violations
similar_names = "allow"
redundant_closure_for_method_calls = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
option_if_let_else = "allow"
single_match_else = "allow"
items_after_statements = "allow"
match_wildcard_for_single_variants = "allow"
wildcard_imports = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
semicolon_if_nothing_returned = "allow"
if_not_else = "allow"
explicit_iter_loop = "allow"
manual_let_else = "allow"
